Fix share controls on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -253,6 +253,10 @@ a:hover {
 	text-decoration: none;
 }
 
+.display-inline {
+	display: inline !important;
+}
+
 @media (max-width: 800px) {
 	.header {
 		height: 160px;
@@ -272,6 +276,10 @@ a:hover {
 
 	.question-container, .answer-container {
 		max-width: 80%;
+	}
+
+	.share-controls {
+		display: none;
 	}
 
 	.created-by {
